--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'HashiCorp - Setup Terraform'
+name: 'HashiCorp - Setup Terraform With Constraints'
 description: 'Sets up Terraform CLI in your GitHub Actions workflow.'
-author: 'HashiCorp, Inc.'
+author: 'HashiCorp, Inc. (original) with jarek@potiuk.com modifications'
 inputs:
   cli_config_credentials_hostname:
     description: 'The hostname of a Terraform Cloud/Enterprise instance to place within the credentials block of the Terraform CLI configuration file. Defaults to `app.terraform.io`.'
@@ -10,7 +10,7 @@ inputs:
     description: 'The API token for a Terraform Cloud/Enterprise instance to place within the credentials block of the Terraform CLI configuration file.'
     required: false
   terraform_version:
-    description: 'The version of Terraform CLI to install. A value of `latest` will install the latest version of Terraform CLI. Defaults to `latest`.'
+    description: 'The version of Terraform CLI to install. Instead of full version string you can also specify constraint string starting with "<" (for example `<1.13.0`) to install the latest version satisfying the constraint. A value of `latest` will install the latest version of Terraform CLI. Defaults to `latest`.'
     default: 'latest'
     required: false
   terraform_wrapper:
